# zipster

./: Makefile  README.md  custom.d.ts  package.json  tsconfig.json  vite.config.ts
src/: App.scss  App.tsx  index.css  index.html  index.tsx  router.tsx  theme.tsx
src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/src/: main.rs
src-tauri/src/app/: cmds.rs  cmds_app.rs  cmds_zipster.rs  handler.rs  mod.rs  payload.rs  response.rs  setup.rs  windows.rs
src-tauri/src/features/: mod.rs  zip.rs  zipster.rs
src-tauri/src/utils/: files.rs  macros.rs  mod.rs  zipster.rs
src/components/compression/confirm-dialog/: index.scss  index.tsx
src/components/compression/files-item/: index.scss  index.tsx
src/components/loading/app-loading/: index.tsx
src/components/settings/change-theme/: index.scss  index.tsx
src/components/settings/pin-window/: index.tsx
src/hooks/: states.ts  use-follow-system-theme.ts  use-theme.ts
src/pages/compression/: index.scss  index.tsx
src/pages/decompression/: index.scss  index.tsx
src/pages/home/: index.tsx
src/pages/setting/: index.scss  index.tsx
src/pages/zip/: index.scss  index.tsx
src/services/: cmds.ts  states.ts  types.d.ts
src/utils/: constants.tsx  format-bytes.tsx  utils.tsx
